# Belenos

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  sample.c
exemples/: main.c  main_rectangle.c  test.c
include/: belenos.h  composant.h  couleur.h  etiquette.h  evenement.h  fenetre.h  file.h  grille.h  point.h  rectangle.h
include/belenos/: window.h
lib/: CMakeLists.txt
lib/include/belenos/: color.h  component.h  draw.h  event.h  frame.h  panel.h  point.h
lib/src/: color.c  component.c  draw.c  event.c  frame.c  panel.c  point.c  window.c
src/: color.c  composant.c  couleur.c  etiquette.c  evenement.c  fenetre.c  file.c  grille.c  main.c  panneau.c  point.c  rectangle.c
test/: CMakeLists.txt  draws.c  sample.c
util/: colors.sh
utils/: automaker.sh  colors.sh
